--- a/index.html
+++ b/index.html
@@ -1,67 +1,71 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title> BookShareHub </title>
-        <header> BookShareHub</header>
+        <title>BookShareHub</title>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+        <link rel="stylesheet" href= "style.css"/>
     </head>
     <body>
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+
+        
         <!-- Price for the books -->
-        <div className = "container">
-            <div className = "row">
-                <div className = "col-12 col-lg-6">
-                    <div className = "firstBook">
+        <div class="container">
+            <div class="row">
+                <div class="col-12 col-lg-6">
+                    <div class="firstBook">
                         <h3>Atomic Changes</h3>
-                        <img src = "Atomic changes.jpeg" width="200px" alt="atomic changes"/>
-                        <p> 
-                            This book changed my perpective on life
-                            <br>
-                            Highly recommended for beginners !
+                        <img src="Atomic changes.jpeg" width="200px" alt="atomic changes"/>
+                        <p>
+                            This book changed my perspective on life<br>
+                            Highly recommended for beginners!
                         </p>
-
                     </div>
 
-                    <div className = "secondBook">
-                        <h3>Fine Art of Small talk</h3>
-                        <img src = "FineArt.jpg" width="200px" alt="Fine art of small talk"/>
-                        <p> 
-                            Demonstrate how to approach people in a fun way
+                    <div class="secondBook">
+                        <h3>Fine Art of Small Talk</h3>
+                        <img src="FineArt.jpg" width="200px" alt="Fine art of small talk"/>
+                        <p>
+                            Demonstrates how to approach people in a fun way
                         </p>
-
                     </div>
 
+                    <div class="thirdBook">
+                        <h3>No Excuses!: The Power of Self-Discipline</h3>
+                        <img src="NoExcuse.webp" width="200px" alt="Fine art of small talk"/>
+                        <p>
+                            Conveys the importance of taking responsibility
+                        </p>
+                    </div>
                 </div>
 
-
-                <div className = "col-12 col-lg-6">
-                    <table>
-                        <tr>
-                            <th>
-                                Prices
-                            </th>
-                        </tr>
-                        <tr>
-                            <td> Atomic changes</td>
-                            <td> $10</td>
-                        </tr>
-                        <tr>
-                            <td> Fine art of small talk</td>
-                            <td> $5</td>
-                        </tr>
-                        <tr>
-                            <td> No excuses </td>
-                            <td> $8 </td>
-                        </tr>
+                <div class="col-12 col-lg-6">
+                    <table class="table">
+                        <thead>
+                            <tr>
+                                <th>Book Title</th>
+                                <th>Price</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>Atomic Changes</td>
+                                <td>$10</td>
+                            </tr>
+                            <tr>
+                                <td>Fine Art of Small Talk</td>
+                                <td>$5</td>
+                            </tr>
+                            <tr>
+                                <td>No Excuses!</td>
+                                <td>$8</td>
+                            </tr>
+                        </tbody>
                     </table>
-
                 </div>
-
             </div>
-
         </div>
-
     </body>
 </html>
