--- a/index.html
+++ b/index.html
@@ -10,18 +10,22 @@
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 
-        
+        <h1> BookShareHub</h1>
         <!-- Price for the books -->
         <div class="container">
             <div class="row">
                 <div class="col-12 col-lg-6">
-                    <div class="firstBook">
-                        <h3>Atomic Changes</h3>
-                        <img src="Atomic changes.jpeg" width="200px" alt="atomic changes"/>
-                        <p>
+                    <div class="firstBook card" style = "width: 18rem">
+                        <img class= "card-img-top" src="Atomic changes.jpeg" width="200px" alt="atomic changes"/>
+                        <div class = "card-body">
+                            <h4 class = "card-title">Atomic Changes <span class = "badge badge-success">New</span></h4>
+                            <p class = "card-text">
                             This book changed my perspective on life<br>
                             Highly recommended for beginners!
-                        </p>
+                            </p>
+                            <a href = "#" class = "btn btn-success"> Add to the cart</a>
+
+                        </div>
                     </div>
 
                     <div class="secondBook">
