--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-12 col-lg-6">
-                    <div class="firstBook card" style = "width: 18rem">
+                    <div class="firstBook card" style = "width: 18rem; margin-bottom: 100px;">
                         <img class= "card-img-top" src="Atomic changes.jpeg" width="200px" alt="atomic changes"/>
                         <div class = "card-body">
                             <h4 class = "card-title">Atomic Changes <span class = "badge badge-success">New</span></h4>
@@ -28,20 +28,27 @@
                         </div>
                     </div>
 
-                    <div class="secondBook">
-                        <h3>Fine Art of Small Talk</h3>
-                        <img src="FineArt.jpg" width="200px" alt="Fine art of small talk"/>
-                        <p>
-                            Demonstrates how to approach people in a fun way
-                        </p>
+                    <div class="secondBook card" style = "width: 18rem; margin-bottom: 100px;">
+                        <img class = "card-img-top" src="FineArt.jpg" width="200px" alt="Fine art of small talk"/>
+                        <div class = "card-body">
+                            <h4 class = "card-title">Fine Art of Small Talk</h4>
+                            <p class = "card-text">
+                                Demonstrates how to approach people in a fun way
+                            </p>
+                            <a href = "#" class = "btn btn-success"> Add to the card</a>
+                        </div>
                     </div>
 
-                    <div class="thirdBook">
-                        <h3>No Excuses!: The Power of Self-Discipline</h3>
-                        <img src="NoExcuse.webp" width="200px" alt="Fine art of small talk"/>
-                        <p>
-                            Conveys the importance of taking responsibility
-                        </p>
+                    <div class="thirdBook card" style = "width: 18rem; margin-bottom: 100px;">
+                        <img class = "card-img-top" src="NoExcuse.webp" width="200px" alt="Fine art of small talk"/>
+                        <div class = "card-body">
+                            <h4 class = "card-title">No Excuses!: The Power of Self-Discipline</h4>
+                            <p class = "card-text">
+                                Conveys the importance of taking responsibility
+                            </p>
+                            <a href = "#" class = "btn btn-success"> Add to the card</a>
+
+                        </div>
                     </div>
                 </div>
 
@@ -72,4 +79,7 @@
             </div>
         </div>
     </body>
+    <footer>
+        <p> Hi </p>
+    </footer>
 </html>
