--- a/index.html
+++ b/index.html
@@ -10,7 +10,30 @@
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 
-        <h1> BookShareHub</h1>
+        <style>
+            .header{
+                display: flex;
+                flex-direction: row;
+            }
+
+            ul li{
+                list-style: none;
+                display: inline;
+            }
+
+        </style>
+        <div class = "header">
+            <h1> BookShareHub</h1>
+            <nav>
+                <ul>
+                    <li> Home </li>
+                    <li> Contact </li>
+                </ul>
+            </nav>
+            <a href = "#" class = "btn btn-primary"> Go to the cart </a>
+        </div>
+
+        
         <!-- Price for the books -->
         <div class="container">
             <div class="row">
