--- a/index.html
+++ b/index.html
@@ -13,12 +13,24 @@
         <style>
             .header{
                 display: flex;
+                color: white;
                 flex-direction: row;
+                justify-content: space-around;
+                align-items: center;
+                height: 80px;
+                background-color: brown;
+                margin-bottom: 40px;
             }
 
             ul li{
                 list-style: none;
                 display: inline;
+                padding: 20px;
+                transition: background-color 0.5s;
+            }
+
+            li:hover{
+                background-color: black;
             }
 
         </style>
