--- a/index.html
+++ b/index.html
@@ -114,7 +114,22 @@
             </div>
         </div>
     </body>
+    <style>
+        .foot{
+            width: 100px;
+            color: white;
+            background-color: brown;
+            width: 100%;
+            height: 100px;
+            display: flex;
+            text-align: center;
+            align-items: center;
+            justify-content: center;
+        }
+    </style>
     <footer>
-        <p> Hi </p>
+        <div class = "foot">
+            <h3> "Reading is to the mind what exercise is to the body"</h3>
+        </div>
     </footer>
 </html>
